implemented tag search by attribute predicate
Signed-off-by: Stephan Richter <s.richter@srsoftware.de>

--- a/de.srsoftware.tools.web/src/test/resources/finding_nemo.html
+++ b/de.srsoftware.tools.web/src/test/resources/finding_nemo.html
@@ -5,7 +5,7 @@
     <title class="my_title">Title</title>
 </head>
 <body>
-  <h1>This is a test</h1>
+  <h1 class="page_title_first">This is a test</h1>
   <p>
     Some <span class="red">Text</span> with <em>emphasis</em>.
   </p>
