--- a/de.srsoftware.tools.web/src/test/resources/finding_nemo.html
+++ b/de.srsoftware.tools.web/src/test/resources/finding_nemo.html
@@ -23,7 +23,7 @@
     This checkbox is checked
   </label>
   <label>
-    <select name="woohoo">
+    <select name="several values for tag">
       <option value="first" >first</option>
       <option value="second" >first</option>
     </select>
